Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2641388 by mallezie, drunken monkey, borisson_, janusman: Added various UX
  improvements for the "Fields" tab.
- #2861587 by alexpott: Fixed the DB/Defaults integration tests.
- #2855758 by StryKaizer, drunken monkey: Fixed "is rendered" checks for Views
  block displays.
- #2855444 by drunken monkey: Added language-specific test for the "Rendered
  item" processor.
- #2794295 by isramv, drunken monkey, alan-ps: Fixed default index indexing term
  names instead of IDs.
- #2343161 by alan-ps, drunken monkey: Added per-datasource indexing stats.
- #2857017 by shkiper: Fixed copy-paste errors in js/index-active-formatters.js.
- #2311039 by drunken monkey: Fixed missing dependency injection for all form
  and plugin classes.
- #2745655 by drunken monkey: Added test for (NOT) NULL conditions on fulltext
  fields in DB backend.
- #2574889 by drunken monkey, ChristianAdamski: Added Tour module integration.
- #2814925 by kducharm, drunken monkey, Cyberwolf: Fixed indexing of computed
  fields.
- #2852807 by alan-ps: Fixed CheckStyle warnings in this project.
- #2659868 by borisson_, drunken monkey: Fixed CacheabilityTest to make sure it
  displays the rendered entities.
- #2853049 by Blanca.Esqueda: Fixed config schema error for Views date filters.
- #2847810 by JayKandari: Added Stemmer to ProcessorIntegrationTest.
- #2753667 by pfrenssen, drunken monkey, borisson_, idimopoulos, sandervd,
  sardara: Improved Views cache plugins and their cache metadata.
- #2843854 by becw, drunken monkey: Fixed date filters in search views.
- #2753763 by drholera, drunken monkey: Added a logging trait which can also
  log exceptions.
- #2850025 by alan-ps: Added a "label_collection" property for our entity types.
- #2851533 by drunken monkey: Adapted the tests to the latest Core changes.
- #2491175 by drunken monkey, ptmkenny: Added a new "Entity status" processor
  to replace "Node status".